# NanToken

./: .gitignore  .mcp.json  README.md  SPEC.md  ask.bat  ask.py  nantoken.yaml  pyproject.toml  requirements.txt  setup.py
.claude/skills/token/: SKILL.md
config/: default.yaml
nantoken/: __init__.py  __main__.py  budget.py  clarify.py  cli.py  config.py  core.py  estimator.py  integrate.py  integrator.py  llm_client.py  mcp_server.py  optimizer.py  runner.py  shell.py  slash_cli.py  task_planner.py  tui.py  universal_client.py
nantoken/hooks/: __init__.py  install.py  stop_track.py
